fix gap for footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@ footer {
     color: white;
     z-index: 10;
 }
+footer > h1:first-child {
+    margin-top: 0;
+}
 #about-text {
   position: absolute;
   z-index: 5;
@@ -141,7 +144,7 @@ object[data="img/tree layer2.svg"] {
     z-index:5;
 }
 object[data="img/tree layer3.svg"] {
-    bottom: 0;
+    bottom: -5px;
     z-index:6;
 }
 @media (max-width: 1400px) {
